syntax = "proto3";

//e2ap pdu
message GrpcMsg {
    int32 Mtype         = 1;
    bytes Payload       = 2;
    int32 PayloadLen    = 3;
    int32 Callid        = 4;
    int32 Timeout       = 5;
    int32 status        = 6;
    string Meid         = 7;
    string topic        = 8;
    int32  SubId        = 9;
}

message GrpcReply {
    int32  code         = 1;
    string err          = 2;
}

